--- a/HW3/static/css/style.css
+++ b/HW3/static/css/style.css
@@ -64,7 +64,7 @@ h1, h2, h5 {
 .btn-cyberpunk:hover {
     color: #0d0d0d;
     background-color: #00ffff;
-    box-shadow: 0 0 20px #00ffff, 0 0 30px #00ffff;
+    box-shadow: 0 0 10px #00ffff, 0 0 15px #00ffff; /* 減弱光暈強度 */
 }
 
 /* Other Button Styles */
@@ -147,14 +147,14 @@ h1, h2, h5 {
     gap: 10px;
     font-size: 1em;
     padding: 5px 10px;
-    background-color: #2b2b2b;
-    color: #00ffff;
+    background-color: #2b2b2b !important;
+    color: #00ffff !important;
     text-transform: uppercase;
     border-bottom: 1px solid #333;
 }
 
 .flatpickr-day {
-    background-color: #2b2b2b !important;
+    background-color: #1a1a1a !important;
     border: 1px solid #333 !important;
     color: #e0e0e0 !important;
     border-radius: 5px;
